[package]
name = "img_diff"
version = "4.0.0"
authors = ["Miguel Mendes <miguelmendeseiriz@gmail.com>"]
edition = '2018'
description = "Command line tool to diff images in 2 structurally similar folders and output diff images."
license = "MIT"
repository = "https://github.com/Mike-Neto/img_diff"
categories = ["multimedia::images", "command-line-utilities"]
keywords = ["image", "comparison"]
readme = "README.md"
exclude = [
    "tests/*",
]

[dependencies]
structopt = "0.3.1"
human-panic = "1.0.1"
image = "0.22.1"

[dev-dependencies]
criterion = "0.3.0"
tempdir = "0.3.7"
assert_cmd = "0.11.1"
predicates = "1.0.1"

[[bench]]
name = "bench"
harness = false

[profile.dev]
opt-level = 3
