[package]
name = "img_diff"
version = "5.0.0"
authors = ["Miguel Mendes <miguelmendeseiriz@gmail.com>"]
edition = '2018'
description = "Command line tool to diff images in 2 structurally similar folders and output diff images."
license = "MIT"
repository = "https://github.com/Mike-Neto/img_diff"
categories = ["multimedia::images", "command-line-utilities"]
keywords = ["image", "comparison"]
readme = "README.md"
exclude = [
    "tests/*",
]

[dependencies]
structopt = "0.3.12"
human-panic = "1.0.3"
image = "0.23.2"

[dev-dependencies]
criterion = "0.3.1"
tempfile = "3.1.0"
assert_cmd = "1.0.1"
predicates = "1.0.4"

[[bench]]
name = "bench"
harness = false
