[package]
name = "img_diff"
version = "5.0.0"
authors = ["Miguel Mendes <miguelmendeseiriz@gmail.com>"]
edition = '2018'
description = "Command line tool to diff images in 2 structurally similar folders and output diff images."
license = "MIT"
repository = "https://github.com/Mike-Neto/img_diff"
categories = ["multimedia::images", "command-line-utilities"]
keywords = ["image", "comparison"]
readme = "README.md"
exclude = [
    "tests/*",
]

[dependencies]
human-panic = "1.0.3"
image = "0.24.5"
clap = { version = "4.0.25", features = ["derive"] }
log = "0.4.17"
env_logger = "0.9.3"
clap-verbosity-flag = "2.0.0"

[dev-dependencies]
criterion = "0.4.0"
tempfile = "3.3.0"
assert_cmd = "2.0.6"
predicates = "2.1.3"

[[bench]]
name = "bench"
harness = false
